# startbootstrap-clean-blog

./: .gitignore  404.html  CNAME  Denis.html  Gemfile  Interesting Facts  README.md  _config.yml  about-red-heart-favicon.txt  about.html  about.php  about.shtml  archive.html  archive.md  bower.json  card.html  categories.md  category.html  chinese.html  code211.html  config.yaml  connectivity.php  contact.html  contact.shtml  contributors.html  documents.html  domain.html  example.html  feed.xml  first-blog  footer.html  footer.js  footer.php  footprints.html  fsg-upload-256573332417.php  functions.php  generate.sh  gulpfile.js  header.html  header.php  (+61 more)
Layouts/: Default.html
Templates/: Bullets.html  Div.html  Generic.html  Header.html  Html.html  Image.html  List.html  MenuAbstract.html  MenuCategorizedContent.html  MenuRecentlyUpdated.html  MenuSection.html  MenuSectionPages.html  MenuSitemapPages.html  Shortcut.html  Table.html  Text.html  Textpic.html  Uploads.html
_authors/: hi.md  m.md  riley.md
_categories/: gratitude.md
_data/: navigation.yml
_drafts/: 2023-05-01-the-compass.md  2023-05-03-the-compass.md  2023-06-26-title.md  2023-11-15-jornaling.md  2023-11-21-thankful.md  2023-11-22-I-am-thankful.md  2023-12-03-the-hope-of-Christmas.md  2023-12-16-thankful-for-His-birth.md  the-hope-of-Christmas.md
_includes/: attribution.html  bootstrap.html  comments.html  countdown.html  firebase-script.html  font-awesome.html  fonts.html  footer.html  header.html  navigation.html  offline-transparency.html  postheading.html  print.html  rich-results.html  (+4 more)
(+482 files in other folders)
